<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPseudonyme"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/txtPseudonyme"
            />
        <EditText
            android:id="@+id/editPseudonyme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtRole"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/txtRole"
            />

        <Spinner
            android:id="@+id/spinnerChoixRole"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtIdPartie"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/txtIdPartie"
            />
        <EditText
            android:id="@+id/editIdPartieJoueur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/join_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Join_party"
        />

    <Button
        android:id="@+id/precedent_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Precedent" />

</LinearLayout>